Refactor email handling and update dependencies
The email handling has been refactored for efficiency and clarity, specifically the emailing events have been simplified. Added asynchronous handling of emailing events. Dependency updates include changing the Java source compatibility to 17 and introducing 'jmolecules' version '2023.1.0'. Details of the 'mailing' application module in the 'build.gradle' file have been rearranged for better organization. Tests for the mailing service have also been added.